--- a/trailNotebook.ipynb
+++ b/trailNotebook.ipynb
@@ -12,18 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My name is Rohit\n"
+      "My name is Rohit7\n"
      ]
     }
    ],
    "source": [
-    "myname = 'Rohit'\n",
+    "myname = 'Rohit7'\n",
     "print(\"My name is %s\"%myname)\n"
    ],
    "metadata": {
